deploy/k8s/svc-alert-management/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-alert-management
spec:
  selector:
    app: svc-alert-management
  ports:
    - port: 80
      targetPort: 8089
